changed security_groups parameter type

--- a/templates/lb_server.yaml
+++ b/templates/lb_server.yaml
@@ -8,7 +8,7 @@ parameters:
     type: string
     description: SSH key to connect to the servers
   security_groups:
-    type: string
+    type: comma_delimited_list
     description: Security groups id list
   flavor:
     type: string
