Added metadata param to the lb_server template

--- a/templates/lb_server.yaml
+++ b/templates/lb_server.yaml
@@ -29,6 +29,7 @@ resources:
   server:
     type: OS::Nova::Server
     properties:
+      metadata: {get_param: metadata}
       flavor: {get_param: flavor}
       block_device_mapping:
         - device_name: vda
