--- a/templates/lb2_server.yaml
+++ b/templates/lb2_server.yaml
@@ -48,6 +48,7 @@ resources:
       pool: {get_param: pool_id}
       address: {get_attr: [server, first_address]}
       protocol_port: 80
+      subnet: [{network: {get_param: network} }]
 
 outputs:
   server_ip:
