--- a/templates/lb2_server.yaml
+++ b/templates/lb2_server.yaml
@@ -24,6 +24,8 @@ parameters:
   network:
     type: string
     description: Network used by the server
+  subnet:
+    type: string
 
 resources:
   server:
@@ -48,7 +50,7 @@ resources:
       pool: {get_param: pool_id}
       address: {get_attr: [server, first_address]}
       protocol_port: 80
-      subnet: {get_param: network}
+      subnet: {get_param: subnet}
 
 outputs:
   server_ip:
